// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhoToFollowPageMain - Snapshots > matches snapshot when loading 1`] = `
<div>
  <div
    class="mt-6 gap-4 lg:mt-0"
    data-testid="container"
  >
    <div
      class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
      data-testid="container"
    >
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
    </div>
  </div>
</div>
`;

exports[`WhoToFollowPageMain - Snapshots > matches snapshot with no users 1`] = `
<div>
  <div
    class="relative mt-6 items-center gap-6 px-0 py-6 lg:mt-0"
    data-testid="who-to-follow-empty"
  >
    <div
      class="flex items-center rounded-full bg-brand/16 p-6"
      data-testid="container"
    >
      <svg
        data-testid="users-icon"
      />
    </div>
    <div
      class="items-center gap-6"
      data-testid="container"
    >
      <h3>
        No recommendations yet
      </h3>
      <p>
        We're still learning about your interests.
        <br />
        Follow some users or explore tags to get personalized recommendations.
      </p>
    </div>
  </div>
</div>
`;

exports[`WhoToFollowPageMain - Snapshots > matches snapshot with users 1`] = `
<div>
  <div
    class="mt-6 gap-4 lg:mt-0"
    data-testid="container"
  >
    <div
      class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
      data-testid="container"
    >
      <div
        data-testid="user-list-item"
        data-user-id="user-1"
      >
        User item
      </div>
      <div
        data-testid="user-list-item"
        data-user-id="user-2"
      >
        User item
      </div>
    </div>
    <div
      class="h-1"
      data-testid="container"
    />
  </div>
</div>
`;
